From d59fce7 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Remove commented lines due to change made earlier in the way
diagonal offsets are stored in member functions
compute_power_spectrum() and compute_power_spectrum_uncertainty() of
class ClosurePhaseDelaySpectrum

From 5547b9e (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Develop work on producing incoherent average of power spectrum
through function incoherent_cross_power_spectrum_average()

From 0172ece (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member functions compute_power_spectrum() and
compute_power_spectrum_uncertainty() of class
ClosurePhaseDelaySpectrum, update diagoffsets to be a dictionary
instead of a list. Update respective docstrings accordingly

From 08df256 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Start work on producing incoherent average of power spectrum
through function incoherent_cross_power_spectrum_average()

From 6a887cb (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in calculation of diagonal weights
along the LST axis while operating on collapse_axes based on the
number of NaN along that axis
(*) In member function compute_power_spectrum_uncertainty() of class
ClosurePhaseDelaySpectrum, fix bug in calculation of diagonal weights
along the LST axis while operating on collapse_axes based on the
number of NaN along that axis

From d2e76c3 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
allow visscaleinfo to contain visibilities in the form of a numpy
array or an instance of class InterferometerArray. Update computing
of matching baselines and LST accordingly. Update member function